--- a/static/index.html
+++ b/static/index.html
@@ -4,62 +4,68 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Wave Generator</title>
 		<style>
+			:root {
+				--brand: #7dd3fc;
+				--brand-dark: #0ea5e9;
+				--bg: #0f172a;
+				--surface: #1e293b;
+				--surface-light: #334155;
+				--text: #f1f5f9;
+				--text-muted: #94a3b8;
+				--accent: #38bdf8;
+				--border: #334155;
+				--error: #ef4444;
+				--success: #22c55e;
+			}
 			* {
 				box-sizing: border-box;
 				margin: 0;
 				padding: 0;
 			}
-
 			body {
 				font-family: "Arial", sans-serif;
 				min-height: 100vh;
-				background: #f0f8ff;
+				background: var(--bg);
+				color: var(--text);
 				display: flex;
 				flex-direction: column;
 				align-items: center;
 				padding: 20px;
 			}
-
 			h1 {
-				color: #2c3e50;
+				color: var(--brand);
 				margin: 1rem 0;
 				font-size: 2rem;
 				text-align: center;
 			}
-
 			.upload-btn {
-				background: #3498db;
-				color: white;
+				background: var(--brand-dark);
+				color: var(--text);
 				padding: 12px 24px;
 				border-radius: 25px;
 				cursor: pointer;
 				border: none;
 				margin: 15px 0;
-				transition: background 0.3s ease;
+				transition: background 0.3s;
 			}
-
 			.upload-btn:hover {
-				background: #2980b9;
+				background: var(--accent);
 			}
-
 			#imageInput {
 				display: none;
 			}
-
 			.container {
 				position: relative;
 				margin: 20px 0;
 				display: inline-block;
 				max-width: 100%;
 			}
-
 			.image-wrapper {
 				position: relative;
 				display: inline-block;
 			}
-
 			#uploadedImage {
-				display: none; /* Oculta la imagen por defecto */
+				display: none;
 				max-width: 100%;
 				height: auto;
 				position: relative;
@@ -83,18 +89,17 @@
 			}
 			.loading {
 				display: none;
-				color: #3498db;
+				color: var(--accent);
 				margin-top: 10px;
 				font-weight: bold;
 			}
-
 			#segmentsTable {
 				margin: 30px auto 0 auto;
 				border-collapse: collapse;
 				width: 100%;
 				max-width: 900px;
-				background: #fff;
-				box-shadow: 0 2px 8px rgba(44, 62, 80, 0.08);
+				background: var(--surface);
+				box-shadow: 0 2px 8px rgba(30, 41, 59, 0.18);
 				border-radius: 8px;
 				overflow: hidden;
 				display: none;
@@ -102,24 +107,23 @@
 			#segmentsTable th,
 			#segmentsTable td {
 				padding: 10px 16px;
-				text-align: center;
 			}
 			#segmentsTable th {
-				background: #3498db;
-				color: #fff;
+				background: var(--brand-dark);
+				color: var(--text);
 				font-weight: bold;
 			}
 			#segmentsTable tr:nth-child(even) {
-				background: #f4f8fb;
+				background: var(--surface-light);
 			}
 			#segmentsTable tr:hover {
-				background: #eaf3fa;
+				background: var(--brand-dark);
 			}
 			#errorMsg {
 				display: none;
-				color: #c0392b;
-				background: #fdecea;
-				border: 1px solid #e74c3c;
+				color: var(--error);
+				background: #1e293b;
+				border: 1px solid var(--error);
 				padding: 12px 20px;
 				margin: 20px auto 0 auto;
 				border-radius: 6px;
@@ -127,20 +131,120 @@
 				text-align: center;
 				font-weight: bold;
 			}
+			.header-nav {
+				width: 100%;
+				max-width: 900px;
+				margin: 0 auto 2rem auto;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				padding: 1rem 2rem;
+				background: var(--surface);
+				border-radius: 16px;
+				box-shadow: 0 2px 8px rgba(30, 41, 59, 0.18);
+				flex-wrap: wrap;
+				gap: 1rem;
+			}
+			.header-nav .brand {
+				font-size: 1.5rem;
+				font-weight: bold;
+				color: var(--brand);
+				letter-spacing: 1px;
+				text-decoration: none;
+			}
+			.header-nav .nav-links {
+				display: flex;
+				gap: 1.2rem;
+				align-items: center;
+				flex-wrap: wrap;
+			}
+			.header-nav .nav-links a {
+				color: var(--text);
+				font-weight: bold;
+				text-decoration: underline;
+				transition: color 0.2s;
+				font-size: 1rem;
+			}
+			.header-nav .nav-links a:hover {
+				color: var(--brand);
+			}
+			.header-nav .github-link {
+				margin-left: 0.5rem;
+				display: flex;
+				align-items: center;
+			}
+			.header-nav .github-link svg {
+				width: 22px;
+				height: 22px;
+				fill: var(--text);
+				transition: fill 0.2s;
+			}
+			.header-nav .github-link:hover svg {
+				fill: var(--brand);
+			}
+			@media (max-width: 700px) {
+				.header-nav {
+					flex-direction: column;
+					align-items: flex-start;
+					padding: 1rem 1rem;
+					gap: 0.5rem;
+				}
+				.header-nav .brand {
+					font-size: 1.2rem;
+				}
+				.header-nav .nav-links {
+					gap: 0.7rem;
+					font-size: 0.98rem;
+				}
+			}
+			.api-key-btn {
+				color: var(--success);
+				font-weight: bold;
+				text-decoration: underline;
+				cursor: pointer;
+				background: none;
+				border: none;
+				font-size: 1rem;
+				padding: 0;
+			}
+			.api-key-result {
+				margin-left: 1em;
+				color: var(--text-muted);
+				font-weight: normal;
+				font-size: 0.98rem;
+			}
 		</style>
-		<style type="text/css" id="operaUserStyle"></style>
-		<style type="text/css"></style>
 	</head>
 	<body>
+		<header class="header-nav">
+			<a href="/" class="brand">Wave Generator</a>
+			<nav class="nav-links">
+				<a href="/blog/wave-generator-math-tutorial">Math & Programming Tutorial</a>
+				<a href="/docs/api-docs">API Documentation</a>
+				<a
+					href="https://github.com/mbiondo/wave-generator"
+					class="github-link"
+					title="GitHub"
+					aria-label="GitHub"
+				>
+					<svg viewBox="0 0 16 16" width="22" height="22" style="vertical-align: middle; fill: #222">
+						<path
+							d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38
+					0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52
+					-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64
+					-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18
+					1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56
+					.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19
+					0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+						/>
+					</svg>
+				</a>
+			</nav>
+		</header>
 		<h1>Wave Generator</h1>
 		<div style="margin-bottom: 1.5rem">
-			<a
-				href="/blog/wave-generator-math-tutorial"
-				target="_blank"
-				style="color: #3498db; font-weight: bold; text-decoration: underline"
-			>
-				Read the Math & Programming Tutorial
-			</a>
+			<button id="generateApiKeyBtn" class="api-key-btn">Generate API Key</button>
+			<span id="apiKeyResult" class="api-key-result"></span>
 		</div>
 
 		<label class="upload-btn" for="imageInput"> 📷 Upload Image </label>
@@ -160,9 +264,6 @@
 		<table id="segmentsTable">
 			<thead>
 				<tr>
-					<th>#</th>
-					<th>Domain Start</th>
-					<th>Domain End</th>
 					<th>Expression</th>
 					<th>Mini SVG</th>
 				</tr>
@@ -275,11 +376,8 @@
 							.map(
 								(seg, idx) => `
 						<tr>
-							<td>${idx + 1}</td>
-							<td>${seg.domain_start ?? seg.X0 ?? ""}</td>
-							<td>${seg.domain_end ?? seg.X1 ?? ""}</td>
 							<td style="font-family:monospace">${seg.expression ?? seg.Expression ?? ""}</td>
-							<td>${seg.svg ?? ""}</td>
+							<td style="text-align: center">${seg.svg ?? ""}</td>
 						</tr>
 					`
 							)
@@ -294,6 +392,17 @@
 					loading.style.display = "none"
 				}
 			})
+
+			document.getElementById("generateApiKeyBtn").onclick = async function (e) {
+				e.preventDefault()
+				const res = await fetch("/generate-apikey", { method: "POST" })
+				if (res.ok) {
+					const data = await res.json()
+					document.getElementById("apiKeyResult").textContent = "Your API Key: " + data.api_key
+				} else {
+					document.getElementById("apiKeyResult").textContent = "Error generating API key"
+				}
+			}
 		</script>
 	</body>
 </html>
